think I fixed Garrett-trello issue where Checkbox text was wrong font and submit button was wrong

--- a/src/App.css
+++ b/src/App.css
@@ -478,7 +478,7 @@ for the description text and char counter to be in a row above it*/
 .copyright {
   display: flex;
   flex-direction: row;
-  padding-top: 120px;
+  margin-top: 120px;
   color: gray;
 }
 
